tests/typing/bad/testfile-mod1-1.scala
class A { def m() { var x: Int = true % 1 } }
object Main { def main(args: Array[String]) { } }
